fix: adjust width on card info block for perfect alignment

--- a/css/components/card-activity.css
+++ b/css/components/card-activity.css
@@ -142,6 +142,7 @@
   }
 
   .activity__info {
+    max-width: 261px;
     max-height: 199px;
     padding: var(--spacing-300);
   }
